static/css/main.css
/* ... */
h2 {
	font-size: 45px;
	margin-bottom: 0px;
}
.home h2 {
	font-size: 40.5px;
}
h3 {
	font-size: 35px;
}
h4 {
	font-size: 25px;
}
h5 {
	font-size: 30px;
	margin-bottom: 15px;
}
h6 {
	font-size: 17px;
}
h1 small {
	font-size: 35px;
}
h2 small {
	font-size: 25px;
}
h3 small {
	font-size: 20px;
}
h4 small {
	font-size: 20px;
}
ul,
ol {
	padding: 0;
	margin: 0 0 15px 25px;
}
ul ul,
ul ol,
ol ol,
ol ul {
	margin-bottom: 0;
}
li {
	line-height: 150%;
}
ul.unstyled,
ol.unstyled {
	margin-left: 0;
	list-style: none;
}
ul.inline,
ol.inline {
	margin-left: 0;
	list-style: none;
}
ul.inline > li,
ol.inline > li {
	display: inline-block;
	padding-left: 5px;
	padding-right: 5px;
}
dl {
	margin-bottom: 1.7;
}
dt,
dd {
	line-height: 1.7;
}
dt {
	font-weight: bold;
}
dd {
	margin-left: 0.85;
}
hr {
	margin: 1.7 0;
	border: 0;
	border-top: 1px solid #eeeeee;
	border-bottom: 1px solid #ffffff;
}
blockquote {
	padding: 0 0 0 15px;
	margin: 0 0 1.7 0;
	border-left: 5px solid #eeeeee;
}
blockquote p {
	margin-bottom: 0;
	font-size: 18px;
	font-weight: 300;
	/*line-height: 1.25;*/
}
blockquote small {
	display: block;
	line-height: 1.7;
	color: #999999;
}
blockquote small:before {
	content: '\2014 \00A0';
}
blockquote.pull-right {
	float: right;
	padding-right: 15px;
	padding-left: 0;
	border-right: 5px solid #eeeeee;
	border-left: 0;
}
blockquote.pull-right p,
blockquote.pull-right small {
	text-align: right;
}
blockquote.pull-right small:before {
	content: '';
}
blockquote.pull-right small:after {
	content: '\00A0 \2014';
}
q:before,
q:after,
blockquote:before,
blockquote:after {
	content: "";
}
address {
	display: block;
	margin-bottom: 1.7;
	font-style: normal;
	line-height: 1.7;
}
html {
	min-height: 100%;
	height: 100%;
}
body {
	-webkit-font-smoothing: antialiased;
	margin: 0;
	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 20px;
	line-height: 1.7;
	color: #333333;
	background-color: #ffffff;
	text-align: center;
	display: block;
	min-height: 100%;
	width: 100%;
	height: 100%;
}
body.home {
	font-size: 18px;
}
.container {
	position: relative;
	max-width: 700px;
	overflow: hidden;
	margin: 0 auto;
	text-align: left;
	padding: 80px 20px 50px 20px;
}
a {
	color: #4788f2;
	text-decoration: none;
	-webkit-transition: all 0.3s ease-in;
	-moz-transition: all 0.3s ease-in;
	-ms-transition: all 0.3s ease-in;
	-o-transition: all 0.3s ease-in;
	transition: all 0.3s ease-in;
	border-bottom: 1px solid transparent;
}
a:hover,
a:focus {
	color: #105edd;
	text-decoration: none;
	border-bottom: 1px solid #105edd;
}
header {
	position: fixed;
	background: rgba(255, 255, 255, 0.9);
	padding: 10px 15px 10px 15px;
	width: 90%;
	width: calc(100% - 30px);
	width: -webkit-calc(100% - 30px);
	width: -moz-calc(100% - 30px);
	width: -ms-calc(100% - 30px);
	width: -o-calc(100% - 30px);
	z-index: 10000;
	height: 30px;
	display: block;
	text-align: center;
	*zoom: 1;
	top: 0px;
	left: 0px;
	-webkit-box-shadow: 0 0px 10px rgba(128, 128, 128, 0.25);
	-moz-box-shadow: 0 0px 10px rgba(128, 128, 128, 0.25);
	box-shadow: 0 0px 10px rgba(128, 128, 128, 0.25);
}
header:before,
header:after {
	display: table;
	content: "";
	line-height: 0;
}
header:after {
	clear: both;
}
header nav {
	*zoom: 1;
	position: relative;
	width: 100%;
	margin: 0;
	padding: 0;
	font-size: 16px;
}
header nav:before,
header nav:after {
	display: table;
	content: "";
	line-height: 0;
}
header nav:after {
	clear: both;
}
header nav ul {
	margin: 0;
	padding: 0;
	position: relative;
	list-style: none;
}
header nav ul.main {
	float: left;
}
header nav ul li {
	display: inline-block;
	margin: 0px 5px;
}
header nav ul li a {
	line-height: 30px;
	border-bottom: none;
}
header nav ul li a:hover,
header nav ul li a:focus {
	text-decoration: none;
	border-bottom: none;
}
header nav ul.main li {
	font-family: monospace;
	font-weight: 400;
	font-size: 16px;
}
header nav ul.main li a {
	border-bottom: none;
}
header nav ul.main li a:hover,
header nav ul.main li a:focus {
	text-decoration: none;
	border-bottom: none;
}
header nav ul.social {
	float: right;
}
header nav ul.social li {
	float: right;
	font-size: 100%;
	margin: 0px 10px;
}
h2 a {
	border-bottom: none;
}
h2 a:hover,
h2 a:focus {
	text-decoration: none;
	border-bottom: none;
}
img {
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	max-width: 100%;
	max-height: auto;
	display: block;
	margin-bottom: 40px;
}
.time {
	font-size: 16px;
	color: #666;
	margin-bottom: 20px;
	display: block;
	font-weight: 600;
	font-family: monospace;
}
article {
	margin-bottom: 60px;
	*zoom: 1;
}
article:before,
article:after {
	display: table;
	content: "";
	line-height: 0;
}
article:after {
	clear: both;
}
.home article {
	margin-bottom: 20px;
}
code,
pre {
	padding: 0 3px 2px;
	font-family: Consolas, Inconsolas, "Courier New", monospace;
	font-size: 14px;
	color: #333333;
}
code {
	padding: 2px 4px;
	color: #d14;
	background-color: #f7f7f9;
	border: 1px solid #e1e1e8;
}
pre {
	display: block;
	padding: 8.5px;
	margin: 20px 0 9px 0;
	line-height: 150%;
	white-space: pre;
	white-space: pre-wrap;
	/* css-3 */

	white-space: -moz-pre-wrap;
	/* Mozilla, since 1999 */

	white-space: -pre-wrap;
	/* Opera 4-6 */

	white-space: -o-pre-wrap;
	/* Opera 7 */

	word-wrap: break-word;
	/* Internet Explorer 5.5+ */

	background-color: #f5f5f5;
	border: 1px solid #ccc;
	border: 1px solid rgba(0, 0, 0, 0.15);
}
pre.prettyprint {
	margin-bottom: 18px;
}
pre code {
	padding: 0;
	color: inherit;
	background-color: transparent;
	border: 0;
}
footer {
	position: relative;
	padding: 10px 20px;
	display: block;
	text-align: left;
	font-size: 70%;
	color: #dfdfdf;
}
footer a,
footer a:hover,
footer a:focus {
	border-bottom: none;
}
.pull-right {
	float: right;
}
.pull-left {
	float: left;
}
.hide {
	display: none;
}
.show {
	display: block;
}
.invisible {
	visibility: hidden;
}
.affix {
	position: fixed;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
td,
th {
  padding: 0;
}
/* ... */

